first part login implemented

--- a/insurance-system/src/main/resources/application.properties
+++ b/insurance-system/src/main/resources/application.properties
@@ -22,3 +22,14 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=dejanjanjic
 server.ssl.key-alias=InsuranceSystem
 server.ssl.key-password=dejanjanjic
+
+# SMTP Server Settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dejan.janjic@student.etf.unibl.org
+spring.mail.password=orhp gzle ayex hcwv
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=false
